provisioners/ec2.tf
resource "aws_instance" "expense" {
    for_each = var.instances #this variable is map
    #for_each will give us a special variable with name for_each
    ami = "ami-0220d79f3f480ecf5"
    instance_type = each.value
    vpc_security_group_ids = [aws_security_group.allow_ssh_terraform.id]
    tags ={
        Name = each.key
    }

    provisioner "local-exec" {
        command = "echo ${self.private_ip} > public_ip.txt"
    }

    connection {
        type     = "ssh"
        user     = "ec2-user"
        password = "DevOps321"
        host     = self.public_ip
    }
    
    # provisioners will execute at the time of creation
    provisioner "remote-exec" {
        inline =  each.key == "frontend" ? [
            "sudo dnf install ansible -y",
            "sudo dnf install nginx -y",
            "echo '<h1>Naveen DevOps 🚀</h1>' | sudo tee /usr/share/nginx/html/index.html"
            "sudo systemctl start nginx",
        ] : [
            "echo 'Not frontend, skipping nginx'"
        ]
    }

    provisioner "remote-exec" {
        when    = destroy
        inline = [
            "sudo systemctl stop nginx",
        ]
    }

}

resource "aws_security_group" "allow_ssh_terraform" {
    name = "allow_sshh"
    description = "Allow port number 22 for SSH access"

    #usually we allow everything in egress
        egress {
            from_port = 0
            to_port = 0
            protocol = "-1"
            cidr_blocks = ["0.0.0.0/0"]
            ipv6_cidr_blocks = ["::/0"]
        }

        ingress {
            from_port = 22
            to_port = 22
            protocol = "tcp"
            cidr_blocks = ["0.0.0.0/0"] #allow from everyone
            ipv6_cidr_blocks = ["::/0"]
        }

        ingress {
            from_port = 80
            to_port = 80
            protocol = "tcp"
            cidr_blocks = ["0.0.0.0/0"] #allow from everyone
            ipv6_cidr_blocks = ["::/0"]
        }

        


        

        tags = {
            Name = "allow_sshh"
        }
}
